2000-12-03  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* docs.shtml: Added link to uploaded BFD docs for current
        release.

2000-11-27  Earnie Boyd  <earnie@users.sourceforge.net>

	* MINGW-USERS-MONTHLY.txt: correct English verbage mistakes.
	Reformat to 67 characters wrap.

2000-10-08  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* links.shtml: Added section "Sites useful for Windows32
        programmers".

        * mingwfaq.shtml: IDE links moved to links.shtml.

        * *.shtml: consistently add "Download" link to page templates.

2000-10-08  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* mingwfaq.shtml: remove blank lines.

2000-09-30  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* MINGW-USERS-MONTHLY.txt: file for monthly mailing to
        list.

2000-09-25  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* ported.shtml, links.shtml: reorganized links to be more
        structured, added link to Mingwrep.

        * index.shtml, history.shtml: replace some abbreviations
        'Win' with full 'Windows', per GNU recommendation.

2000-09-19  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* *.shtml: Replace footer links consistenly.

2000-09-16  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* index.shtml: replace SourceForge logo link with one 
        required by SF.

        * index.shtml: Replace email to submit bugs/additions 
        with links to bug/patch tracker forms.

2000-09-12  Earnie Boyd  <earnie_boyd@yahoo.com>

        * mingwfaq.shtml: modified link for the Bloodshed Dev-C++ to be as
	reported by "Ian C. Smith" <icsmi2@student.monash.edu.au>

2000-09-12  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* history.shtml: Added rough sketch of history.

2000-09-11  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* lists.shtml: Update mingw list URL.

        * index.shtml: Suggest posting to general mailing lists for