@@ -1,0 +1,24 @@
+<!-- =================================================================== -->
+<!--                                                                     -->
+<!--			Tabbed Navigation bar                            -->
+<!--                                                                     -->
+<!-- Only add this on pages that are long, such that the left sidebar is -->
+<!-- is not visible when at the bottom.                                  -->
+
+<p align="center">
+<small>
+<a href="index.shtml">Mingw Home</a>            |
+<a href="http://sourceforge.net/project/showfiles.php?group_id=2435&release_id=15084">Download</a> |
+<a href="docs.shtml">Documentation</a>          |
+<a href="mirrors.shtml">Mirror Sites</a>        |
+<a href="links.shtml">Related Sites</a>         |
+<a href="ported.shtml">Ported Software</a>      |
+<a href="lists.shtml">Mailing Lists</a>         |
+<a href="licensing.shtml">Licensing Terms</a>   |
+<a href="who.shtml">Who are we?</a>             |
+<a href="news.shtml">News</a>                   |
+<a href="history.shtml">Project History</a> 
+</small>
+</p>
+
+<!--$Id:-->
