@@ -1,0 +1,34 @@
+<!-- ================================================================== -->
+<!--                                                                    -->
+<!--			     Left Sidebar                               -->
+<!--                                                                    -->
+
+<table border="0">
+
+<tr><td colspan="2"><a href="index.shtml">Mingw Home</a></td></tr>
+
+<tr><td colspan="2"><a href="http://sourceforge.net/project/showfiles.php?group_id=2435&release_id=15084">Download</a></td></tr>
+
+<tr><td colspan="2"><a href="docs.shtml">Documentation</a></td></tr>
+
+<tr><td><tt>&nbsp;</tt></td>
+<td><small><a href="mingwfaq.shtml">Frequently Asked Questions (FAQ)</a></small></td></tr>
+
+<tr><td colspan="2"><a href="mirrors.shtml">Mirror Sites</a></td></tr>
+
+<tr><td colspan="2"><a href="links.shtml">Related Sites</a></td></tr>
+
+<tr><td colspan="2"><a href="ported.shtml">Ported Software</a></td></tr>
+
+<tr><td colspan="2"><a href="lists.shtml">Mailing Lists</a></td></tr>
+
+<tr><td colspan="2"><a href="licensing.shtml">Licensing Terms</a></td></tr>
+
+<tr><td colspan="2"><a href="who.shtml">Who are we?</a></td></tr>
+
+<tr><td colspan="2"><a href="news.shtml">News</a></td></tr>
+
+<tr><td colspan="2"><a href="history.shtml">Project History</a></td></tr>
+
+</table>
+<!--$Id:-->
